feat: Implement SuperKey authentication system
- Added SuperKey authentication functionality in the JNI layer (jni.c) to allow manager authentication using a secret key.
- Implemented the authenticate_superkey function in ksu.c to handle SuperKey validation via ioctl.
- Defined a new struct for SuperKey authentication in ksu.h and added the corresponding ioctl command.
- Exposed the authenticateSuperKey method in the Natives Kotlin object for Java interop.
- Updated UI components in Flash.kt and Home.kt to include SuperKey input and authentication dialogs.
- Enhanced the Install.kt screen to accept SuperKey input for APatch-style installations.
- Integrated SuperKey handling in KsuCli.kt for command-line operations.
- Added localized strings for SuperKey authentication in strings.xml.
- Updated build configurations to support Java 17.
- Introduced a new Python script for generating SuperKey hashes for kernel compilation.
- Developed kernel-side implementation for SuperKey authentication in superkey.c and superkey.h.
- Documented the SuperKey authentication system in a new markdown guide.

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -709,4 +709,19 @@
     <string name="group_contains_apps">包含 %1$d 个应用</string>
     <string name="settings_disable_sulog"> 禁用超级用户日志 </string>
     <string name="settings_disable_sulog_summary">禁用 KernelSU 超级用户访问记录</string>
+
+    <!-- SuperKey 认证 -->
+    <string name="superkey_auth_title">超级密钥认证</string>
+    <string name="superkey_auth_subtitle">输入您的超级密钥以认证为管理器</string>
+    <string name="superkey_input_hint">超级密钥</string>
+    <string name="superkey_input_placeholder">请输入超级密钥</string>
+    <string name="superkey_authenticate">认证</string>
+    <string name="superkey_auth_success">认证成功</string>
+    <string name="superkey_auth_failed">认证失败</string>
+    <string name="superkey_required">需要超级密钥认证</string>
+    <string name="superkey_not_configured">内核未配置超级密钥</string>
+    <string name="show_password">显示密码</string>
+    <string name="hide_password">隐藏密码</string>
+    <string name="superkey_optional_title">超级密钥（可选）</string>
+    <string name="superkey_optional_desc">设置超级密钥用于 APatch 风格的认证。留空则使用签名认证。</string>
 </resources>
