feat: add partition management and complete i18n for HymoFS
- Add auto-scan functionality for partition candidates
- Implement chip-based partition input UI with add/remove support
- Fix partition display overflow with FlowRow layout
- Add scanPartitionCandidates() function to detect mountpoints
- Replace all hardcoded text with string resources
- Add comprehensive English and Chinese translations
- Support comma-separated partition input
- Add scan button to automatically detect active partitions

This completes the HymoFS configuration UI with full feature
parity to the original hymo module's partition management.

--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -780,5 +780,23 @@ Important Note:\n
     <string name="hymofs_logs_filter_info">Info</string>
     <string name="hymofs_logs_filter_warn">Warn</string>
     <string name="hymofs_logs_filter_error">Error</string>
+    <string name="hymofs_partitions">Active Partitions</string>
+    <string name="hymofs_partitions_desc">Partitions to scan for module modifications (comma-separated)</string>
+    <string name="hymofs_partitions_scan">Scan Partitions</string>
+    <string name="hymofs_partitions_add">Add Partition</string>
+    <string name="hymofs_partitions_placeholder">Enter partition names (e.g., mi_ext, my_stock)</string>
+    <string name="hymofs_general">General</string>
+    <string name="hymofs_advanced">Advanced</string>
+    <string name="hymofs_fix_mounts">Fix Mount IDs</string>
+    <string name="hymofs_rules_clear_all">Clear All Rules</string>
+    <string name="hymofs_rules_clear_confirm">Are you sure you want to clear all active HymoFS rules? This will take effect immediately.</string>
+    <string name="hymofs_rules_clear">Clear</string>
+    <string name="hymofs_rules_cancel">Cancel</string>
+    <string name="hymofs_rules_not_available">HymoFS kernel not available. Rules tab requires HymoFS kernel support.</string>
+    <string name="hymofs_rules_refresh">Refresh</string>
+    <string name="hymofs_rules_count">%d active rules</string>
+    <string name="hymofs_rules_empty">No active rules</string>
+    <string name="hymofs_logs_daemon">Daemon Log</string>
+    <string name="hymofs_logs_kernel">Kernel Log</string>
 </resources>
 
