--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -793,4 +793,13 @@
     <string name="hymofs_rules_empty">没有活动规则</string>
     <string name="hymofs_logs_daemon">守护进程日志</string>
     <string name="hymofs_logs_kernel">内核日志</string>
+    <string name="hymofs_kernel_title">HymoFS 内核</string>
+    <string name="hymofs_version_label">版本：%s</string>
+    <string name="hymofs_stats_hymofs">HymoFS</string>
+    <string name="hymofs_info_kernel">内核</string>
+    <string name="hymofs_info_selinux">SELinux</string>
+    <string name="hymofs_info_mount_base">挂载基点</string>
+    <string name="hymofs_info_active_mounts">活动挂载：</string>
+    <string name="hymofs_info_more_mounts">……还有 %d 个</string>
+    <string name="hymofs_mismatch_default">检测到协议不匹配。请更新内核或模块。</string>
 </resources>
