feat: Add support for EROFS in HymoFS configuration and management
- Introduced a new setting to prefer EROFS over other file systems in the HymoFS configuration.
- Updated the HymoFSManager to handle the new preferErofs configuration option.
- Added localization strings for the new EROFS preference setting in both English and Chinese.
- Implemented EROFS image creation and mounting logic in the storage management code.
- Enhanced the setup_storage function to prioritize EROFS when configured.
- Refactored restorecon functionality to improve SELinux context management.
- Added utility functions for managing binary assets and ensuring their presence.
- Removed obsolete restorecon implementation and integrated it into the core functionality.

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -751,6 +751,8 @@
     <string name="hymofs_verbose_desc">启用详细的守护进程日志</string>
     <string name="hymofs_force_ext4">强制 EXT4</string>
     <string name="hymofs_force_ext4_desc">始终使用 EXT4 镜像而非 tmpfs</string>
+    <string name="hymofs_prefer_erofs">优先 EROFS</string>
+    <string name="hymofs_prefer_erofs_desc">优先使用 EROFS（只读压缩格式，节省内存）</string>
     <string name="hymofs_disable_umount">禁用卸载</string>
     <string name="hymofs_disable_umount_desc">进程隔离时不卸载文件系统</string>
     <string name="hymofs_kernel_debug">内核调试</string>
