feat: Enhance partition management with multi-select and batch operations
- Added multi-select mode for partition backups, allowing users to select multiple partitions for batch operations.
- Implemented UI changes to support showing all partitions and toggling between common and all partitions.
- Introduced batch backup functionality, enabling users to back up multiple selected partitions at once.
- Enhanced logging for partition operations to improve debugging and user feedback.
- Updated string resources for better localization and user experience.
- Modified the partition helper to include dangerous and excluded partitions for better safety during operations.

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -588,4 +588,46 @@
     <string name="partition_device_type">设备类型</string>
     <string name="partition_current_slot">当前槽位</string>
     <string name="partition_other_slot">其他槽位</string>
+    <string name="partition_multi_select">多选备份</string>
+    <string name="partition_cancel_select">取消多选</string>
+    <string name="partition_show_all">显示全部</string>
+    <string name="partition_collapse">收起</string>
+    <string name="partition_selected_count">已选择 %d 个分区</string>
+    <string name="partition_select_all">全选</string>
+    <string name="partition_batch_backup">批量备份</string>
+    <string name="partition_common">常用分区</string>
+    <string name="partition_all">所有分区</string>
+    <string name="partition_dangerous_warning">危险分区！操作不当可能导致设备变砖</string>
+    <string name="partition_info_title">分区信息</string>
+    <string name="partition_info_type">类型</string>
+    <string name="partition_info_size">大小</string>
+    <string name="partition_info_device">设备</string>
+    <string name="partition_info_slot">槽位</string>
+    <string name="partition_available_operations">可用操作</string>
+    <string name="partition_backup_to_file">备份到文件</string>
+    <string name="partition_flash_image">刷写镜像</string>
+    <string name="partition_dangerous_operation">危险操作</string>
+    <string name="partition_dangerous_operation_warning">⚠️ 危险操作警告</string>
+    <string name="partition_flash_warning">刷写分区可能导致设备无法启动！\n\n确定要刷写 %s 分区吗？</string>
+    <string name="partition_dangerous_flash_warning">⚠️ 警告：%s 是危险分区！\n\n刷写此分区可能导致：\n• 设备无法启动\n• 丢失重要数据\n• 网络/蓝牙功能失效\n\n请确保您知道自己在做什么！\n\n确定要刷写 %s 分区吗？</string>
+    <string name="partition_confirm_flash">确定刷写</string>
+    <string name="partition_backing_up">正在备份分区 %s…</string>
+    <string name="partition_backup_success">备份成功：%s</string>
+    <string name="partition_backup_failed">备份失败：%s</string>
+    <string name="partition_backup_failed_check_log">备份失败，请查看 logcat 日志</string>
+    <string name="partition_flashing">正在刷写 %s…</string>
+    <string name="partition_flash_success">刷写成功！建议立即重启。</string>
+    <string name="partition_flash_failed">刷写失败：%s</string>
+    <string name="partition_flash_failed_check_log">刷写失败，请查看 logcat 日志</string>
+    <string name="partition_cannot_read_file">无法读取文件</string>
+    <string name="partition_load_failed">加载分区信息失败：%s</string>
+    <string name="partition_ab_device">A/B 设备</string>
+    <string name="partition_a_only_device">A-only 设备</string>
+    <string name="partition_unknown">未知</string>
+    <string name="partition_batch_backup_start">开始批量备份 %d 个分区…</string>
+    <string name="partition_batch_backup_progress">备份中 (%d/%d)：%s</string>
+    <string name="partition_batch_backup_complete">批量备份完成！共 %d 个分区\n保存在：%s</string>
+    <string name="partition_batch_backup_partial">备份完成：成功 %d 个，失败 %d 个\n失败：%s</string>
+    <string name="partition_no_selection">没有选择要备份的分区</string>
+    <string name="partition_back">返回</string>
 </resources>
