--- a/manager/app/src/main/res/values/strings.xml
+++ b/manager/app/src/main/res/values/strings.xml
@@ -585,4 +585,46 @@
     <string name="partition_device_type">Device Type</string>
     <string name="partition_current_slot">Current Slot</string>
     <string name="partition_other_slot">Other Slot</string>
+    <string name="partition_multi_select">Multi-select Backup</string>
+    <string name="partition_cancel_select">Cancel Multi-select</string>
+    <string name="partition_show_all">Show All</string>
+    <string name="partition_collapse">Collapse</string>
+    <string name="partition_selected_count">Selected %d partitions</string>
+    <string name="partition_select_all">Select All</string>
+    <string name="partition_batch_backup">Batch Backup</string>
+    <string name="partition_common">Common Partitions</string>
+    <string name="partition_all">All Partitions</string>
+    <string name="partition_dangerous_warning">DANGEROUS partition! Improper operation may brick device</string>
+    <string name="partition_info_title">Partition Information</string>
+    <string name="partition_info_type">Type</string>
+    <string name="partition_info_size">Size</string>
+    <string name="partition_info_device">Device</string>
+    <string name="partition_info_slot">Slot</string>
+    <string name="partition_available_operations">Available Operations</string>
+    <string name="partition_backup_to_file">Backup to File</string>
+    <string name="partition_flash_image">Flash Image</string>
+    <string name="partition_dangerous_operation">Dangerous Operation</string>
+    <string name="partition_dangerous_operation_warning">⚠️ Dangerous Operation Warning</string>
+    <string name="partition_flash_warning">Flashing partition may cause device unable to boot!\n\nAre you sure you want to flash %s partition?</string>
+    <string name="partition_dangerous_flash_warning">⚠️ Warning: %s is a dangerous partition!\n\nFlashing this partition may cause:\n• Device unable to boot\n• Loss of important data\n• Network/Bluetooth malfunction\n\nPlease make sure you know what you are doing!\n\nAre you sure you want to flash %s partition?</string>
+    <string name="partition_confirm_flash">Confirm Flash</string>
+    <string name="partition_backing_up">Backing up partition %s…</string>
+    <string name="partition_backup_success">Backup successful: %s</string>
+    <string name="partition_backup_failed">Backup failed: %s</string>
+    <string name="partition_backup_failed_check_log">Backup failed, please check logcat logs</string>
+    <string name="partition_flashing">Flashing %s…</string>
+    <string name="partition_flash_success">Flash successful! Recommend reboot immediately.</string>
+    <string name="partition_flash_failed">Flash failed: %s</string>
+    <string name="partition_flash_failed_check_log">Flash failed, please check logcat logs</string>
+    <string name="partition_cannot_read_file">Cannot read file</string>
+    <string name="partition_load_failed">Failed to load partition info: %s</string>
+    <string name="partition_ab_device">A/B Device</string>
+    <string name="partition_a_only_device">A-only Device</string>
+    <string name="partition_unknown">Unknown</string>
+    <string name="partition_batch_backup_start">Starting batch backup of %d partitions…</string>
+    <string name="partition_batch_backup_progress">Backing up (%d/%d): %s</string>
+    <string name="partition_batch_backup_complete">Batch backup complete! Total %d partitions\nSaved in: %s</string>
+    <string name="partition_batch_backup_partial">Backup complete: %d succeeded, %d failed\nFailed: %s</string>
+    <string name="partition_no_selection">No partition selected</string>
+    <string name="partition_back">Back</string>
 </resources>
