Refactors file flashing to a dedicated install screen
Moves AnyKernel3 and KernelSU module flashing logic to a new `InstallScreen`.

Introduces a "Flash File via Install Screen" action that navigates to the `InstallScreen` with the preselected file URI, replacing the direct AK3 flash option. The "Flash Module" action is removed.

Removes the `flashAK3` and `flashModule` functions from the `KernelManagerViewModel` as their logic is now handled by the new installation flow.

Retains the "Flash Kernel Image" action for direct kernel image flashing within the current screen.

This change centralizes file-based installations, improving consistency and maintainability of the flashing process.

--- a/manager/app/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/app/src/main/res/values-zh-rCN/strings.xml
@@ -66,7 +66,7 @@
     <string name="failed_to_update_app_profile">为 %s 更新 App Profile 失败</string>
     <string name="require_kernel_version" formatted="false">当前 KernelSU 版本 %s 过低，管理器无法正常工作，请将内核 KernelSU 版本升级至 %s 或以上！</string>
     <string name="settings_umount_modules_default">默认卸载模块</string>
-    <string name="settings_umount_modules_default_summary">App Profile 中\"卸载模块\"的全局默认值，如果启用，将会为没有设置 Profile 的应用移除所有模块针对系统的修改。</string>
+    <string name="settings_umount_modules_default_summary">App Profile 中"卸载模块"的全局默认值，如果启用，将会为没有设置 Profile 的应用移除所有模块针对系统的修改。</string>
     <string name="profile_umount_modules_summary">启用该选项后将允许 KernelSU 为本应用还原被模块修改过的文件。</string>
     <string name="profile_selinux_domain">域</string>
     <string name="profile_selinux_rules">规则</string>
@@ -124,7 +124,7 @@
     <string name="settings_restore_stock_image">恢复原厂镜像</string>
     <string name="settings_uninstall_temporary_message">临时卸载 KernelSU，下次重启后恢复至原始状态。</string>
     <string name="settings_uninstall_permanent_message">完全并永久卸载 KernelSU（Root 权限和所有模块）。</string>
-    <string name="settings_restore_stock_image_message">恢复原厂镜像（若存在备份），一般在 OTA 前使用；如果你需要卸载 KernelSU，请使用\"永久卸载\"。</string>
+    <string name="settings_restore_stock_image_message">恢复原厂镜像（若存在备份），一般在 OTA 前使用；如果你需要卸载 KernelSU，请使用"永久卸载"。</string>
     <string name="flashing">刷写中</string>
     <string name="flash_success">刷写完成</string>
     <string name="flash_failed">刷写失败</string>
@@ -671,6 +671,8 @@
     <string name="kernel_flash_failed">内核刷入失败：%s</string>
     <string name="kernel_loading">正在加载内核信息…</string>
     <string name="kernel_refresh">刷新</string>
+    <string name="kernel_flash_file">通过安装页面刷入文件</string>
+    <string name="kernel_flash_file_desc">选择 ZIP 或 IMG 文件以使用主流程刷写</string>
     <string name="install_advanced_tools">高级工具</string>
     <string name="kernel_manager_desc">查看内核信息、刷入镜像、管理 AVB</string>
     <string name="partition_manager_desc">备份/恢复分区、管理槽位</string>
